NATTQA-ENV/force-app/main/default/objects/CONTAINER_Failure_Repair__c/CONTAINER_Failure_Repair__c.object-meta.xml
<CustomObject>
    <label>Failure Repair</label>
    <nameField>
        <displayFormat>FRN-{00000}</displayFormat>
        <label>Failure Repair Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Failure Repairs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>