NATTQA-ENV/force-app/main/default/objects/CONTAINER_Failure_Repair__c/fields/CONTAINER_Anti_Tamper_Seal_Control__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Anti_Tamper_Seal_Control__c</fullName>
    <label>Anti Tamper Seal Control</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>