NATTQA-ENV/force-app/main/default/objects/CONTAINER_Failure_Repair__c/fields/CONTAINER_Box_Mfg__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Box_Mfg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Box Mfg</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Failure_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>