NATTQA-ENV/force-app/main/default/objects/CONTAINER_Failure_Repair__c/fields/CONTAINER_Commissioning__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commissioning</label>
    <referenceTo>CONTAINER_Commissionig__c</referenceTo>
    <relationshipLabel>Failure Repairs</relationshipLabel>
    <relationshipName>Failure_Repairs</relationshipName>
    <type>Lookup</type>
</CustomField>