NATTQA-ENV/force-app/main/default/objects/CONTAINER_Failure_Repair__c/fields/CONTAINER_Commissioning_Agent__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Commissioning Agent Value from Commissioning record</description>
    <label>Commissioning Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Failure_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>