NATTQA-ENV/force-app/main/default/objects/CONTAINER_Failure_Repair__c/fields/CONTAINER_Commissioning_Weekly_Log__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning_Weekly_Log__c</fullName>
    <label>Commissioning Weekly Log</label>
    <referenceTo>CONTAINER_Commissioning_Weekly_Log__c</referenceTo>
    <relationshipLabel>Failure Repairs</relationshipLabel>
    <relationshipName>Failure_Repairs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>