NATTQA-ENV/force-app/main/default/objects/CONTAINER_Failure_Repair__c/fields/CONTAINER_Container_No__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Container_No__c</fullName>
    <label>Container No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>