NATTQA-ENV/force-app/main/default/objects/CONTAINER_Failure_Repair__c/fields/CONTAINER_Referigerant_Control__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Referigerant_Control__c</fullName>
    <label>Referigerant Control</label>
    <length>255</length>
    <type>Text</type>
</CustomField>