NATTQA-ENV/force-app/main/default/objects/CONTAINER_Failure_Repair__c/fields/CONTAINER_Serial__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Serial__c</fullName>
    <label>Unit Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>