NATTQA-ENV/force-app/main/default/objects/CONTAINER_Failure_Repair__c/fields/CONTAINER_Unit__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Unit__c</fullName>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>