NATTQA-ENV/force-app/main/default/objects/CONTAINER_Failure_Repair__c/fields/CONTAINER_Week__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Week__c</fullName>
    <label>Week #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>