NATTQA-ENV/force-app/main/default/objects/CONTAINER_Failure_Repair__c/validationRules/Week_Number_Cannot_Be_More_Than_53.validationRule-meta.xml
<ValidationRule>
    <fullName>Week_Number_Cannot_Be_More_Than_53</fullName>
    <active>true</active>
    <description>Week Number should not be more than 52 on failure report object</description>
    <errorConditionFormula>AND( OR( ISNEW(), ISCHANGED(CONTAINER_Week__c)) , CONTAINER_Week__c &gt; 53,
NOT( $Permission.CONTAINER_Bypass_Validation_Rule ))</errorConditionFormula>
    <errorDisplayField>CONTAINER_Week__c</errorDisplayField>
    <errorMessage>Week number cannot be more than 53 weeks.</errorMessage>
</ValidationRule>